force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/NI_HRM_SignUp_Request_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for the creation of Orgs from Opportunities</description>
    <label>NI HRM SignUp Request Settings</label>
</CustomObject>