force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/Org_Details_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Details_Record_Type__c</fullName>
    <description>Record type for the Org Details Record that will be created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Org Details Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>