force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/SignUp_Request_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>SignUp_Request_Case_Owner__c</fullName>
    <description>The Owner of the case that is created to notify that an Org has been requested</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SignUp Request Case Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>