force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/SignUp_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>SignUp_Request_Email__c</fullName>
    <description>This is the email address that the response from Salesforce will be sent to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SignUp Request Email</label>
    <type>Email</type>
</CustomField>