force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/SignUp_Request_Get_URL__c.field-meta.xml
<CustomField>
    <fullName>SignUp_Request_Get_URL__c</fullName>
    <description>URL for the the HTTPRequest to Get the Signup Request Record that was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SignUp Request Get URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>