force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/SignUp_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>SignUp_Request_URL__c</fullName>
    <description>The URL For the HTTPRequest Posting to create the SignupRequest Object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SignUp Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>