force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/TSO_Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>TSO_Auth_Endpoint__c</fullName>
    <description>The Authentication Endpoint for the Login Post to the TSO org</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TSO Auth Endpoint</label>
    <type>Url</type>
</CustomField>