force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/TSO_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>TSO_Client_Secret__c</fullName>
    <description>The Client Secret of the TSO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TSO Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>