force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/TSO_ClientId__c.field-meta.xml
<CustomField>
    <fullName>TSO_ClientId__c</fullName>
    <description>The Client Id of the TSO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TSO ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>