force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/TSO_Password__c.field-meta.xml
<CustomField>
    <fullName>TSO_Password__c</fullName>
    <description>The Password for Logging into the TSO Org</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TSO Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>