force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/TSO_Server__c.field-meta.xml
<CustomField>
    <fullName>TSO_Server__c</fullName>
    <description>The URL of the TSO Server</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TSO Server</label>
    <type>Url</type>
</CustomField>