force-app/main/default/objects/NI_HRM_SignUp_Request_Settings__c/fields/TSO_User_Name__c.field-meta.xml
<CustomField>
    <fullName>TSO_User_Name__c</fullName>
    <description>The User Name for Logging into the TSO Org</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TSO User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>